[package]
name = "esp32s3-fun"
version = "0.1.0"
authors = ["Brendan <brendan@obrafamily.org>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
#[patch.crates-io]
#embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
embedded-svc = { version = "0.26.4", default-features = true }
esp-idf-hal = { version = "0.42.5", default-features = false, features = ["esp-idf-sys"] }
anyhow = "1"
sx127x_lora = "0.3.1"
[dev-dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.33.3", features = ["native", "binstart"] }
futures = "0.3"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
postcard = "1"


[build-dependencies]
embuild = "0.31.3"
